--- a/servant-elm-street.cabal
+++ b/servant-elm-street.cabal
@@ -25,7 +25,6 @@ source-repository head
 
 library
   exposed-modules:
-      ServanElmFuncGenerator
       ServantElm
   other-modules:
       Paths_servant_elm_street
@@ -35,6 +34,7 @@ library
       aeson
     , base >=4.7 && <5
     , casing
+    , elm-bridge
     , elm-street
     , filepath
     , random
@@ -46,6 +46,7 @@ library
     , text
     , wai
     , warp
+    , wl-pprint-text
   default-language: Haskell2010
 
 executable servant-elm-street-exe
@@ -59,6 +60,7 @@ executable servant-elm-street-exe
       aeson
     , base
     , casing
+    , elm-bridge
     , elm-street
     , filepath
     , random
@@ -71,6 +73,7 @@ executable servant-elm-street-exe
     , text
     , wai
     , warp
+    , wl-pprint-text
   default-language: Haskell2010
 
 test-suite servant-elm-street-test
@@ -85,6 +88,7 @@ test-suite servant-elm-street-test
       aeson
     , base >=4.7 && <5
     , casing
+    , elm-bridge
     , elm-street
     , filepath
     , random
@@ -97,4 +101,5 @@ test-suite servant-elm-street-test
     , text
     , wai
     , warp
+    , wl-pprint-text
   default-language: Haskell2010
