--- a/servant-elm-street.cabal
+++ b/servant-elm-street.cabal
@@ -32,34 +32,10 @@ library
       src
   ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-deriving-strategies -Wmissing-export-lists -Wunused-packages
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , elm-street
     , microlens
     , prettyprinter
-    , random
-    , servant
-    , servant-foreign
-    , text
-    , wai
-  default-language: Haskell2010
-
-executable servant-elm-street-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_servant_elm_street
-  hs-source-dirs:
-      app
-  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-deriving-strategies -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
-  build-depends:
-      aeson
-    , base >=4.7 && <5
-    , elm-street
-    , microlens
-    , prettyprinter
-    , random
-    , servant
-    , servant-elm-street
     , servant-foreign
     , text
     , wai
@@ -74,13 +50,10 @@ test-suite servant-elm-street-test
       test
   ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-deriving-strategies -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
+      base >=4.7 && <5
     , elm-street
     , microlens
     , prettyprinter
-    , random
-    , servant
     , servant-elm-street
     , servant-foreign
     , text
