--- a/examples/servant-elm-street-main/servant-elm-street-main.cabal
+++ b/examples/servant-elm-street-main/servant-elm-street-main.cabal
@@ -20,46 +20,65 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/servant-elm-street-main
+  location: https://github.com/ChaosGroup/
+  subdir: servant-elm-street-main
 
 library
   exposed-modules:
-      ExampleApi
+      ExampleAPI
   other-modules:
-      Paths_servant_elm_street_test
+      Paths_servant_elm_street_main
   hs-source-dirs:
       src
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , elm-street
+    , prettyprinter
     , servant
+    , servant-elm-street
+    , servant-foreign
+    , servant-server
+    , text
   default-language: Haskell2010
 
 executable servant-elm-street-main-exe
   main-is: Main.hs
   other-modules:
-      Paths_servant_elm_street_test
+      Paths_servant_elm_street_main
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , elm-street
+    , prettyprinter
     , servant
+    , servant-elm-street
     , servant-elm-street-main
+    , servant-foreign
+    , servant-server
+    , text
   default-language: Haskell2010
 
 test-suite servant-elm-street-main-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_servant_elm_street_test
+      Paths_servant_elm_street_main
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      aeson
+    , base >=4.7 && <5
     , elm-street
+    , prettyprinter
     , servant
+    , servant-elm-street
     , servant-elm-street-main
+    , servant-foreign
+    , servant-server
+    , text
   default-language: Haskell2010
