--- a/examples/servant-elm-street-main/servant-elm-street-main.cabal
+++ b/examples/servant-elm-street-main/servant-elm-street-main.cabal
@@ -29,6 +29,7 @@ library
       Paths_servant_elm_street_main
   hs-source-dirs:
       src
+  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-export-lists -Wunused-packages
   build-depends:
       aeson
     , base >=4.7 && <5
@@ -47,16 +48,9 @@ executable servant-elm-street-main-exe
       Paths_servant_elm_street_main
   hs-source-dirs:
       app
-  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      aeson
-    , base >=4.7 && <5
-    , elm-street
-    , prettyprinter
-    , servant
-    , servant-elm-street
+      base >=4.7 && <5
     , servant-elm-street-main
-    , servant-foreign
-    , servant-server
     , text
   default-language: Haskell2010
