--- a/examples/servant-elm-street-main/servant-elm-street-main.cabal
+++ b/examples/servant-elm-street-main/servant-elm-street-main.cabal
@@ -34,12 +34,9 @@ library
       aeson
     , base >=4.7 && <5
     , elm-street
-    , prettyprinter
     , servant
-    , servant-elm-street
     , servant-foreign
     , servant-server
-    , text
   default-language: Haskell2010
 
 executable servant-elm-street-main-exe
@@ -51,6 +48,9 @@ executable servant-elm-street-main-exe
   ghc-options: -Wall -Werror -Wincomplete-uni-patterns -Wredundant-constraints -Widentities -Wincomplete-record-updates -Wmissing-export-lists -Wunused-packages -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , elm-street
+    , prettyprinter
+    , servant-elm-street
     , servant-elm-street-main
     , text
   default-language: Haskell2010
