Add new endpoints to test headers

--- a/examples/backend/backend.cabal
+++ b/examples/backend/backend.cabal
@@ -33,6 +33,7 @@ library
   build-depends:
       aeson
     , base >=4.7 && <5
+    , bytestring
     , elm-street
     , servant-server
     , text
